# starbarter

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker_pwa_implementationplan.md  implementation_plan.md  pyproject.toml
src/spacetraders/: config.py
src/spacetraders/api/: client.py  models.py
src/spacetraders/bot/: commands.py  main.py  ships.py
src/spacetraders/db/: connection.py  queries.py  schema.sql
src/spacetraders/tui/: app.py  app.tcss
src/spacetraders/tui/screens/: contracts.py  fleet.py  markets.py  transactions.py
src/spacetraders/tui/widgets/: command_input.py
src/spacetraders/web/: deps.py  main.py
src/spacetraders/web/routers/: agent.py  bot_control.py  commands.py  contracts.py  events.py  markets.py  ships.py  transactions.py
src/spacetraders/web/static/: index.html  manifest.json  sw.js
src/spacetraders/web/static/app/: app.css  app.js
src/spacetraders/web/static/app/components/: bot-controls.js  command-modal.js  status-bar.js  table.js
src/spacetraders/web/static/app/views/: activity.js  contracts.js  fleet.js  markets.js  transactions.js
tests/: test_db.py
