[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "spacetraders"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "aiolimiter>=1.1",
    "textual>=0.80",
    "aiosqlite>=0.20",
    "structlog",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=1.8",
]

[project.scripts]
st-bot = "spacetraders.bot.main:run"
st-tui = "spacetraders.tui.app:run"
st-web = "spacetraders.web.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
